--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -51,7 +51,9 @@ jobs:
   security:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout code
+      - uses: actions/checkout@v3
+      
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python-3.8@master
 
