--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -24,32 +24,22 @@ on:
   pull_request:
     branches: ["main"]
 
-permissions:
-  contents: read
-  security-events: read
+#permissions:
+#  contents: read
+#  security-events: read
 
 jobs:
   security:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python-3.9@master
+        uses: snyk/actions/python-3.8@master
         continue-on-error: true # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --sarif-file-output=snyk.sarif
-
-      - name: Print Snyk Version and Auth Info
-        run: |
-          snyk --version
-          snyk auth ${{ secrets.SNYK_TOKEN }}
-
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v2
         with:
