--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -25,7 +25,7 @@ on:
     branches: ["main"]
 
 jobs:
-  snyk-open:
+  security:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
