--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -29,10 +29,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Snyk setup
-      - uses: snyk/actions/setup@master
+        uses: snyk/actions/setup@master
       
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python-3.8@master
