--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Snyk setup
         uses: snyk/actions/setup@master
+        with:
+          SNYK_TOKEN: ${{ secretes.SNYK_TOKEN }}
       
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python-3.8@master
@@ -43,7 +45,7 @@ jobs:
           args: --sarif-file-output=snyk.sarif
 
       - name: Snyk Code test
-        run: snyk code test --sarif #> snyk-code.sarif # || true
+        run: snyk code test --sarif > snyk-code.sarif # || true
 
         # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
       - name: Snyk Open Source monitor
