--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Snyk setup
         uses: snyk/actions/setup@master
         with:
-          SNYK_TOKEN: ${{ secretes.SNYK_TOKEN }}
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python-3.8@master
