--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -46,9 +46,15 @@ jobs:
           args: --sarif-file-output=snyk.sarif
 
       - name: Snyk Code test
-        run: snyk code test --sarif > snyk-code.sarif  || true
+         ## run: snyk code test --sarif > snyk-code.sarif  || true
+        run: snyk code test
+         
 
-      #  # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
+      # Runs Snyk Code (SAST) analysis and uploads result to Snyk.
+      - name: Snyk Code monitor
+        run: snyk monitor --all-projects
+      
+      #  Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
       #- name: Snyk Open Source monitor
       #  run: snyk monitor --all-projects
 
