--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Snyk Code test
          ## run: snyk code test --sarif > snyk-code.sarif  || true
-        run: snyk code test
+        run: snyk code test || true
          
 
       # Runs Snyk Code (SAST) analysis and uploads result to Snyk.
