--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -45,14 +45,18 @@ jobs:
         with:
           args: --sarif-file-output=snyk.sarif
 
+      - name: Upload Snyk Vulnerability Scan Results to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk.sarif
+
       - name: Snyk Code test
-         ## run: snyk code test --sarif > snyk-code.sarif  || true
-        run: snyk code test || true
-         
+        run: snyk code test --sarif | tee snyk-code.sarif  || true
+        #run: snyk code test || true  
 
       # Runs Snyk Code (SAST) analysis and uploads result to Snyk.
-      - name: Snyk Code monitor
-        run: snyk monitor --all-projects
+      #- name: Snyk Code monitor
+      #  run: snyk monitor --all-projects
       
       #  Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
       #- name: Snyk Open Source monitor
